--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </div>
             <div id="v_box3">
                 <video poster="images/title.jpg" width="900" id="myVideo3">
-                    <source src="media/Title%20Sequence.mp4">
+                    <source src="media/Title Sequence.mp4">
                 </video>
                 <a class="btn3" onclick="toggleVideo('myVideo3', '.btn3', '.current-time3', '.total-time3', '.slider3')">재생/정지</a>
                 <div class="time-container">
