--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="images/portfolio_main_home.png" alt="name video portfolio">
             <a href="https://www.instagram.com/gwonyj91" target="_blank">
                 <span><img src="images/instagram.png" alt="instagram"></span>
-                <span class="in_text">@gwonyj91</span>
+                <span class="in_text">gwonyj91</span>
             </a>
         </div>
         <div id="youtube">
