--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 </head>
 
 <body>
+    <nav class="navbar">
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#resume">Resume</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#storyboard1">Infographic</a></li>
+          <li><a href="#storyboard2">Vlog</a></li>
+          <li><a href="#storyboard3">Title Sequence</a></li>
+          <li><a href="#artwork">Artwork</a></li>
+        </ul>
+      </nav>
+
     <div id="wrap">
         <div id="home">
             <img src="images/portfolio_main_home.png" alt="name video portfolio">
@@ -83,7 +95,7 @@
             </div>
             <div id="v_box3">
                 <video poster="images/title.jpg" width="900" id="myVideo3">
-                    <source src="media/Title Sequence.mp4">
+                    <source src="media/titlesequence.mp4">
                 </video>
                 <a class="btn3">재생/정지</a>
                 <div class="time-container">
@@ -93,6 +105,16 @@
                 <input type="range" class="slider3" value="0" min="0" step="0.1" style="width: 100%;">
             </div>
         </div>
+        <div id="content">
+            <div class="text">
+              <p>아트웍</p>
+              <h3>건담</h3>
+              <p>일러스트 펜툴로 작업하였습니다.</p>
+            </div>
+            <div id="artwork">
+                <h2><img src="images/artwork.jpg" alt="artwork"></h2>
+              </div>
+          </div>
 
         <footer>
             Copyright &copy; 2021 by Gwon YongJun. All Rights Reserved.
@@ -101,4 +123,5 @@
 </body>
 
 </html>
+
 
